@@ -12,29 +12,20 @@ package com.gitee.dbswitch.data.util;
 import cn.hutool.core.util.ClassLoaderUtil;
 import com.gitee.dbswitch.common.entity.CloseableDataSource;
 import com.gitee.dbswitch.common.entity.InvisibleDataSource;
+import com.gitee.dbswitch.common.entity.JarClassLoader;
+import com.gitee.dbswitch.common.util.ExamineUtils;
 import com.gitee.dbswitch.data.domain.WrapCommonDataSource;
 import com.gitee.dbswitch.data.domain.WrapHikariDataSource;
 import com.gitee.dbswitch.data.entity.SourceDataSourceProperties;
 import com.gitee.dbswitch.data.entity.TargetDataSourceProperties;
 import com.zaxxer.hikari.HikariDataSource;
-import java.io.File;
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
-import java.util.List;
 import java.util.Objects;
 import java.util.Properties;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import javax.sql.DataSource;
 import lombok.experimental.UtilityClass;
 import lombok.extern.slf4j.Slf4j;
@@ -58,7 +49,8 @@ public final class DataSourceUtils {
    * @param properties 数据库连接描述符
    * @return HikariDataSource连接池
    */
-  public static CloseableDataSource createSourceDataSource(SourceDataSourceProperties properties) {
+  public static CloseableDataSource createSourceDataSource(
+      SourceDataSourceProperties properties) {
     Properties parameters = new Properties();
     HikariDataSource ds = new HikariDataSource();
     ds.setPoolName("The_Source_DB_Connection");
@@ -102,7 +94,8 @@ public final class DataSourceUtils {
    * @param properties 数据库连接描述符
    * @return HikariDataSource连接池
    */
-  public static CloseableDataSource createTargetDataSource(TargetDataSourceProperties properties) {
+  public static CloseableDataSource createTargetDataSource(
+      TargetDataSourceProperties properties) {
     HikariDataSource ds = new HikariDataSource();
     ds.setPoolName("The_Target_DB_Connection");
     ds.setJdbcUrl(properties.getUrl());
@@ -151,10 +144,15 @@ public final class DataSourceUtils {
     return new WrapHikariDataSource(ds, urlClassLoader);
   }
 
-  public static CloseableDataSource createCommonDataSource(String jdbcUrl,
-      String driverClass, String driverPath,
-      String username, String password) {
-    URLClassLoader urlClassLoader = createURLClassLoader(driverPath, driverClass);
+  public static CloseableDataSource createCommonDataSource(
+      String jdbcUrl,
+      String driverClass,
+      String driverPath,
+      String username,
+      String password) {
+    URLClassLoader urlClassLoader = createURLClassLoader(
+        driverPath,
+        driverClass);
     InvisibleDataSource dataSource = createInvisibleDataSource(
         urlClassLoader,
         jdbcUrl,
@@ -166,65 +164,46 @@ public final class DataSourceUtils {
     return new WrapCommonDataSource(dataSource, urlClassLoader);
   }
 
-  private static InvisibleDataSource createInvisibleDataSource(ClassLoader cl,
-      String jdbcUrl, String driverClass, String username,
-      String password, Properties properties) {
-    return new InvisibleDataSource(cl, jdbcUrl, driverClass, username, password, properties);
+  private static InvisibleDataSource createInvisibleDataSource(
+      ClassLoader cl,
+      String jdbcUrl,
+      String driverClass,
+      String username,
+      String password,
+      Properties properties) {
+    return new InvisibleDataSource(
+        cl,
+        jdbcUrl,
+        driverClass,
+        username,
+        password,
+        properties);
   }
 
-  private static URLClassLoader createURLClassLoader(String driverPath, String driverClass) {
-    if (StringUtils.isBlank(driverPath)) {
-      throw new RuntimeException("Invalid driver path,can not be empty!");
-    }
-    if (StringUtils.isBlank(driverClass)) {
-      throw new RuntimeException("Invalid driver class,can not be empty!");
-    }
-    List<Path> filePaths = findJarFilesFromDirectory(driverPath);
-    if (filePaths.isEmpty()) {
-      throw new RuntimeException("No jar file found from path:" + driverPath + "!");
-    }
-    URL[] urls = filePaths.stream().map(path -> convertPath2URL(path)).toArray(URL[]::new);
+  private static URLClassLoader createURLClassLoader(
+      String driverPath, String driverClass) {
+    ExamineUtils.checkArgument(
+        StringUtils.isNoneBlank(driverPath),
+        "Invalid driver path,can not be empty!");
+    ExamineUtils.checkArgument(
+        StringUtils.isNoneBlank(driverClass),
+        "Invalid driver class,can not be empty!");
     ClassLoader parent = driverClass.contains("postgresql")
         ? ClassLoaderUtil.getContextClassLoader()
         : ClassLoaderUtil.getSystemClassLoader().getParent();
-    URLClassLoader loader = new URLClassLoader(urls, parent);
+    URLClassLoader loader = new JarClassLoader(driverPath, parent);
     try {
       Class<?> clazz = loader.loadClass(driverClass);
-      clazz.newInstance();
+      clazz.getConstructor().newInstance();
       return loader;
-    } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+    } catch (Exception e) {
       log.error("Could not load class : {} from driver path: {}", driverClass, driverPath, e);
       throw new RuntimeException(e);
     }
   }
 
-  private static URL convertPath2URL(Path path) {
-    try {
-      return path.toUri().toURL();
-    } catch (MalformedURLException e) {
-      throw new RuntimeException(e);
-    }
-  }
-
-  public static List<Path> findJarFilesFromDirectory(String path) {
-    File file = new File(path);
-    if (!file.exists()) {
-      throw new RuntimeException("Path:" + path + " is not exists!");
-    }
-    Predicate<Path> fileFilter = f -> {
-      String fileName = f.toFile().getName();
-      return fileName.endsWith(".jar") || fileName.endsWith(".JAR");
-    };
-    try (Stream<Path> paths = Files.walk(Paths.get(path))) {
-      return paths.filter(Files::isRegularFile)
-          .filter(fileFilter)
-          .collect(Collectors.toList());
-    } catch (IOException e) {
-      throw new RuntimeException(e);
-    }
-  }
-
-  private static String executeStringReturnedSql(DataSource dataSource, String sql) {
+  private static String executeStringReturnedSql(
+      DataSource dataSource, String sql) {
     try (Connection connection = dataSource.getConnection()) {
       try (Statement statement = connection.createStatement()) {
         try (ResultSet resultSet = statement.executeQuery(sql)) {
